@@ -9,7 +9,12 @@ MANFILES = $(XML_SRCS:.xml=)
 
 XML_SRCS = $(wildcard *.1.xml)
 
-%.1 : %.1.xml ; rm -f $@ && "$(PATH_XML2MAN)" $< $@
+%.1 : %.1.xml
+ifndef HAVE_XML2MAN
+	$(error xml2man required to build man pages!)
+else
+	rm -f $@ && "$(PATH_XML2MAN)" $< $@
+endif
 
 install-hook-pre: $(MANFILES)
 
